@startuml
'https://plantuml.com/class-diagram


skinparam classAttributeIconSize 0
title Klassen



class CurrentWeather {
    showWeather()
}

abstract class Weather {
    - timeStamp: Date
    - location: Location
    temperature2M: Double
    apparentTemperature: Double
    freezingLevelHeight: Double
    relativeHumidity2M: Int
    rain: Double
    windSpeed10m: Int
    windDirection10m: Int
    isDay: Boolean
    weatherCode: WeatherCode
    setWeather()
}

class DailyWeather {
    -sunrise: Date
    -sunset: Date
    -moonPhase: State
    setHistoricWeather()
    getDataAt()
}

class WeatherAccuracy {
    calculateAccuracy()

}

class Location {
    - latitude: Double
    - longitude: Double
    - name: String
    - admin1: String
    - admin2: String
    - elevation: Double
    - favorites: List
    setFavorite()
    isFavorite(List)
}

class Activities{
    setActivity(timeStamp: Date, location: Location)
    getActivity()
    generateRecommendation()
}

class PollenData {
    - alderPollen: Double
    - birchPollen: Double
    - grassPollen: Double
    - mugwortPollen: Double
    - ragweedPollen: Double
    getPollenDataAt(time: Date)
}

class APIHandler {
    -url: URL
    -connection: HttpURLConnection
    -responseCode: Int
    fetchWeather()
    fetchLocation()
    fetchHistoric()
    storeWeather()
    storeLocation()
}

enum WeatherCode {
    weathercodes: Enum
}


Weather --> WeatherCode
Weather --> Location


@enduml